Updated bio, food, and hobbies; changed remote image, added heading background colors and changed font colors of paragraph and lists

--- a/index.html
+++ b/index.html
@@ -6,35 +6,42 @@
     <title>About Shelby Norris</title>
 </head>
 <body>
-    <h1>Shelby Norris</h1>
+    <h1 style="background-color: rgb(95, 219, 213);">Shelby Norris</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident dignissimos sapiente explicabo quos doloremque odit ut voluptatum tenetur commodi quas, quisquam aperiam assumenda officia magni optio totam recusandae sunt 
+    <p style="color: purple;">Hi there! I'm Shelby, a single mother who works full time and messes around with coding in my spare time. I'm originally from Mississippi, but I've been living in Louisiana for quite some time now. I'm always down for something new, whether it be traveling to new places, or learning a new skill.
     </p>
 
-    <h2>My Favorite Foods</h2>
+    <h2 style="background-color: rgb(95, 219, 213);">My Favorite Foods</h2>
 
-    <ol>
+    <ol style="color: purple;">
         <li>Rojas Viejas</li>
         <li>Tikka Masala</li>
-        <li>Pizza</li>
+        <li>Pretty much any vegetable, any way it's prepared</li>
     </ol>
 
-    <h2>My Hobbies</h2>
-    <ul>
+    <h2 style="background-color: rgb(95, 219, 213);">My Hobbies</h2>
+
+    <ul style="color: purple;">
         <li>Traveling</li>
         <li>Swimming</li>
         <li>Reading</li>
     </ul>
 
+
+    <a href="https://github.com/slnorris">Have a look at my GitHub!</a><br>
+
+    <h2 style="background-color: rgb(95, 219, 213);">Cat Memes (because why not)</h2>
+
     <!-- Remote Hosted -->
 
-    <img src="https://i.ebayimg.com/images/g/j38AAOSwgHZYC8Iw/s-l1200.jpg" width="300" height="400" alt="cat meme">
+    <img src="https://preview.redd.it/hand-over-your-silliest-cat-memes-v0-665xjvlhb4yc1.jpeg?auto=webp&s=f94698567705a4065ea267dd82246b9c20cca944" width="300" height="400" alt="cat meme">
 
     <!-- Locally Hosted -->
 
     <img src="cat meme.jpg" width="300" height="400" alt="Local Cat Meme">
 
-    
+
+
 
 
 </body>
