Corrected spelling in food list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2 style="background-color: rgb(95, 219, 213);">My Favorite Foods</h2>
 
     <ol style="color: purple;">
-        <li>Rojas Viejas</li>
+        <li>Ropas Viejas</li>
         <li>Tikka Masala</li>
         <li>Pretty much any vegetable, any way it's prepared</li>
     </ol>
