--- a/index.html
+++ b/index.html
@@ -1,48 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Shelby Norris</title>
-</head>
-<body>
-    <h1 style="background-color: rgb(95, 219, 213);">Shelby Norris</h1>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="hobbies.html">Hobbies</a>
+      </nav>
+    </header>
+    <h1 style="background-color: rgb(95, 219, 213)">Shelby Norris</h1>
 
-    <p style="color: purple;">Hi there! I'm Shelby, a single mother who works full time and messes around with coding in my spare time. I'm originally from Mississippi, but I've been living in Louisiana for quite some time now. I'm always down for something new, whether it be traveling to new places, or learning a new skill.
+    <p style="color: purple">
+      Hi there! I'm Shelby, a single mother who works full time and messes
+      around with coding in my spare time. I'm originally from Mississippi, but
+      I've been living in Louisiana for quite some time now. I'm always down for
+      something new, whether it be traveling to new places, or learning a new
+      skill.
     </p>
 
-    <h2 style="background-color: rgb(95, 219, 213);">My Favorite Foods</h2>
+    <h2 style="background-color: rgb(95, 219, 213)">My Favorite Foods</h2>
 
-    <ol style="color: purple;">
-        <li>Ropas Viejas</li>
-        <li>Tikka Masala</li>
-        <li>Pretty much any vegetable, any way it's prepared</li>
+    <ol style="color: purple">
+      <li>Ropas Viejas</li>
+      <li>Tikka Masala</li>
+      <li>Pretty much any vegetable, any way it's prepared</li>
     </ol>
 
-    <h2 style="background-color: rgb(95, 219, 213);">My Hobbies</h2>
+    <h2 style="background-color: rgb(95, 219, 213)">My Hobbies</h2>
 
-    <ul style="color: purple;">
-        <li>Traveling</li>
-        <li>Swimming</li>
-        <li>Reading</li>
+    <ul style="color: purple">
+      <li>Traveling</li>
+      <li>Swimming</li>
+      <li>Reading</li>
     </ul>
 
+    <a href="https://github.com/slnorris">Have a look at my GitHub!</a><br />
 
-    <a href="https://github.com/slnorris">Have a look at my GitHub!</a><br>
-
-    <h2 style="background-color: rgb(95, 219, 213);">Cat Memes (because why not)</h2>
+    <h2 style="background-color: rgb(95, 219, 213)">
+      Cat Memes (because why not)
+    </h2>
 
     <!-- Remote Hosted -->
 
-    <img src="https://preview.redd.it/hand-over-your-silliest-cat-memes-v0-665xjvlhb4yc1.jpeg?auto=webp&s=f94698567705a4065ea267dd82246b9c20cca944" width="300" height="400" alt="cat meme">
+    <img
+      src="https://preview.redd.it/hand-over-your-silliest-cat-memes-v0-665xjvlhb4yc1.jpeg?auto=webp&s=f94698567705a4065ea267dd82246b9c20cca944"
+      width="300"
+      height="400"
+      alt="cat meme"
+    />
 
     <!-- Locally Hosted -->
 
-    <img src="cat meme.jpg" width="300" height="400" alt="Local Cat Meme">
+    <img src="cat meme.jpg" width="300" height="400" alt="Local Cat Meme" />
 
-
-
-
-
-</body>
+    <footer>©️March 2025 Codex Cohort</footer>
+  </body>
 </html>
