added contact and hobbies pages, changed font and background colors, added navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <nav>
         <a href="index.html">Home</a>
         <a href="hobbies.html">Hobbies</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
     <h1 style="background-color: rgb(95, 219, 213)">Shelby Norris</h1>
