Added Google fonts, borders, colors from a color palette, styled elements with fonts, colors, sizes, padding, margins, added hover features

--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>About Shelby Norris</title>
   </head>
   <body>
+    <div class="content">
     <header>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="hobbies.html">Hobbies</a>
-        <a href="contact.html">Contact</a>
+        <ul class="nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
     </header>
-    <h1 style="background-color: rgb(95, 219, 213)">Shelby Norris</h1>
+    <h1><strong>Shelby Norris</strong></h1>
 
-    <p style="color: purple">
+    <p>
       Hi there! I'm Shelby, a single mother who works full time and messes
       around with coding in my spare time. I'm originally from Mississippi, but
       I've been living in Louisiana for quite some time now. I'm always down for
@@ -23,41 +27,38 @@
       skill.
     </p>
 
-    <h2 style="background-color: rgb(95, 219, 213)">My Favorite Foods</h2>
+    <h2 class="h2">My Favorite Foods</h2>
 
-    <ol style="color: purple">
+
+  <div class="foods">
+    <ul class="foods">
       <li>Ropas Viejas</li>
+      <li>Fish & seafood</li>
       <li>Tikka Masala</li>
+      <li>Sushi</li>
       <li>Pretty much any vegetable, any way it's prepared</li>
-    </ol>
+    </ul>
+  </div>
 
-    <h2 style="background-color: rgb(95, 219, 213)">My Hobbies</h2>
+    <h2 class="h2">My Favorite Hobbies</h2>
 
-    <ul style="color: purple">
+    
+  <div class="hobbies">
+    <ul class="hobbies">
       <li>Traveling</li>
       <li>Swimming</li>
       <li>Reading</li>
+      <li>Watching movies (LOTR is my favorite!)</li>
+      <li>Listening to music</li>
     </ul>
+  </div>
 
-    <a href="https://github.com/slnorris">Have a look at my GitHub!</a><br />
-
-    <h2 style="background-color: rgb(95, 219, 213)">
-      Cat Memes (because why not)
-    </h2>
-
-    <!-- Remote Hosted -->
-
-    <img
-      src="https://preview.redd.it/hand-over-your-silliest-cat-memes-v0-665xjvlhb4yc1.jpeg?auto=webp&s=f94698567705a4065ea267dd82246b9c20cca944"
-      width="300"
-      height="400"
-      alt="cat meme"
-    />
-
-    <!-- Locally Hosted -->
-
-    <img src="cat meme.jpg" width="300" height="400" alt="Local Cat Meme" />
+  <div class="github">
+    <a href="https://github.com/slnorris">Have a look at my GitHub!</a>
+  </div>
+    <br />
 
     <footer>©️March 2025 Codex Cohort</footer>
+    </div>
   </body>
 </html>
