--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <header>
       <nav>
         <ul class="nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="hobbies.html">Hobbies</a></li>
+          <li><a href="index.html">Home</a></li> |
+          <li><a href="hobbies.html">Hobbies</a></li> |
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     <h1><strong>Shelby Norris</strong></h1>
+
+    <img src="pro_pic.jpg" alt="Shelby Norris">
 
     <p>
       Hi there! I'm Shelby, a single mother who works full time and messes
@@ -58,7 +60,7 @@
   </div>
     <br />
 
-    <footer>©️March 2025 Codex Cohort</footer>
+    <footer>©️Made with blood, sweat, tears, and coffee</footer>
     </div>
   </body>
 </html>
