Added styling to contact page (h1, navbar, background color, Google fonts, border)

--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <link rel="stylesheet" href="contact-style.css">
     <title>Contact</title>
   </head>
   <body>
     <header>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="hobbies.html">Hobbies</a>
-        <a href="contact.html">Contact</a>
+      <nav class="nav">
+        <ul>
+        <li><a href="index.html">Home</a></li> |
+        <li><a href="hobbies.html">Hobbies</a></li> |
+        <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
     </header>
-    <h1 style="background-color: rgb(95, 219, 213)">Contact Me</h1>
-    <p style="color: purple">
+    <h1 style=>Contact Me</h1>
+    <p style=>
       Email: shelbs9109@gmail.com <br />
       <br />
       GitHub: <a href="https://github.com/slnorris">My GitHub</a>
     </p>
     <br />
     <br />
-    <p style="color: purple">Feel free to leave a message!</p>
+    <p>Feel free to leave a message!</p>
     <form>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" /><br /><br />
